--- a/la.html
+++ b/la.html
@@ -184,19 +184,22 @@
             
             <p><a href="contact.html" class="btn btn-primary py-3 px-4 my-4">Contact Us</a></p>
           </div>
-          <!-- <div class="col-md-6">
-            <div class="slider-container">
-              <div class="slider">
-                <img src="images/dubai/1.png">
-                <img src="images/dubai/1212.png">
-                <img src="images/dubai/1.png">
+          <div class="col-md-6">
+            <div class="slider">
+              <div class="slider-images">
+                <img src="images/la/">
+                <img src="images/la//2.png">
+                <img src="images/la//3.png">
+                <img src="images/la//4.png">
+                <img src="images/la//5.png">
+                <img src="images/la//6.png">
               </div>
-              <div class="prev-arrow">&#10094;</div>
-              <div class="next-arrow">&#10095;</div>
+              <div class="slider-controls">
+                <div class="slider-control active"></div>
+                <div class="slider-control"></div>
+                <div class="slider-control"></div>
+              </div>
             </div>
-            
-          </div>
-        </div> -->
 
       </div>
     </div>
