--- a/dubai.html
+++ b/dubai.html
@@ -199,21 +199,33 @@
           </div>
           <div class="col-md-6">
             <div class="slider">
-              <div class="slider-images">
-                <img src="images/dubai/1.png">
-                <img src="images/dubai/2.png">
-                <img src="images/dubai/3.png">
-                <img src="images/dubai/4.png">
-                <img src="images/dubai/5.png">
-                <img src="images/dubai/6.png">
+              <div class="slider-container">
+                <div class="slider-item">
+                  <img src="images/dubai/1.png" alt="Image 1">
+                </div>
+                <div class="slider-item">
+                  <img src="images/dubai/2.png" alt="Image 1">
+                </div>
+                <div class="slider-item">
+                  <img src="images/dubai/3.png" alt="Image 1">
+                </div>
+                <div class="slider-item">
+                  <img src="images/dubai/4.png" alt="Image 1">
+                </div>
+                <div class="slider-item">
+                  <img src="images/dubai/5.png" alt="Image 1">
+                </div>
+                <div class="slider-item">
+                  <img src="images/dubai/6.png" alt="Image 1">
+                </div>
+
+
               </div>
               <div class="slider-controls">
-                <div class="slider-control active"></div>
-                <div class="slider-control"></div>
-                <div class="slider-control"></div>
+                <button class="slider-prev">Previous</button>
+                <button class="slider-next">Next</button>
               </div>
             </div>
-            
         </div>
 
       </div>
@@ -253,38 +265,7 @@
     <script src="js/aos.js"></script>
 
     <script src="js/main.js"></script>
-    <script>
-      let sliderIndex = 0;
-      const sliderImages = document.querySelectorAll(".slider-images img");
-      const sliderControls = document.querySelectorAll(".slider-control");
-
-      function showSliderImage() {
-        // Hide all slider images
-        for (let i = 0; i < sliderImages.length; i++) {
-          sliderImages[i].style.transform = "translateX(-100%)";
-        }
-
-        // Show the current slider image
-        sliderImages[sliderIndex].style.transform = "translateX(0)";
-
-        // Update the active slider control
-        for (let i = 0; i < sliderControls.length; i++) {
-          sliderControls[i].classList.remove("active");
-        }
-        sliderControls[sliderIndex].classList.add("active");
-
-        // Increment the slider index
-        sliderIndex++;
-        if (sliderIndex >= sliderImages.length) {
-          sliderIndex = 0;
-        }
-
-        // Run the function again after 5 seconds
-        setTimeout(showSliderImage, 1000);
-      }
-
-      showSliderImage();
-    </script>
+    
   </body>
 
 </html>
