--- a/bangkok.html
+++ b/bangkok.html
@@ -33,46 +33,7 @@
   color: #efba6c;
 }
 
-      .slider-container {
-  position: relative;
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-}
-.slider {
-  display: flex;
-  width: 100%;
-  overflow-x: hidden;
-}
-.slider img {
-  flex: 0 0 100%;
-  height: auto;
-}
-.prev-arrow, .next-arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 40px;
-  height: 40px;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 40px;
-  cursor: pointer;
-}
-.prev-arrow {
-  left: 0;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
-.next-arrow {
-  right: 0;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
+  
     </style>
   </head>
 
@@ -192,24 +153,36 @@
             
             <p><a href="contact.html" class="btn btn-primary py-3 px-4 my-4">Contact Us</a></p>
           </div>
+          <!-- silder images -->
           <div class="col-md-6">
             <div class="slider">
-              <div class="slider-images">
-                <img src="images/bankkok/1.png">
-                <img src="images/bankkok/2.png">
-                <img src="images/bankkok/3.png">
-                <img src="images/bankkok/4.png">
-                <img src="images/bankkok/5.png">
-                <img src="images/bankkok/6.png">
+              <div class="slider-container">
+                <div class="slider-item">
+                  <img src="images/bangkok/1.png" alt="Image 1">
+                </div>
+                <div class="slider-item">
+                  <img src="images/bangkok/2.png" alt="Image 1">
+                </div>
+                <div class="slider-item">
+                  <img src="images/bangkok/3.png" alt="Image 1">
+                </div>
+                <div class="slider-item">
+                  <img src="images/bangkok/4.png" alt="Image 1">
+                </div>
+                <div class="slider-item">
+                  <img src="images/bangkok/5.png" alt="Image 1">
+                </div>
+                <div class="slider-item">
+                  <img src="images/bangkok/6.png" alt="Image 1">
+                </div>
+
               </div>
               <div class="slider-controls">
-                <div class="slider-control active"></div>
-                <div class="slider-control"></div>
-                <div class="slider-control"></div>
+                <button class="slider-prev">Previous</button>
+                <button class="slider-next">Next</button>
               </div>
             </div>
-
-      </div>
+        </div>
     </div>
 
 
