--- a/bangkok.html
+++ b/bangkok.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Trips &mdash; Lotus Tour and Events</title>
+    <title>Trips &mdash;  Lotus Tours and Events</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -192,7 +192,7 @@
           <div class="col-md-12">
             <div class="border-top">
               <p>
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved Lotus Tour and Events</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  Lotus Tours and Events</a>
             </p>
             </div>
           </div>
