--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Contact &mdash; Lotus Tour and Events</title>
+    <title>Contact &mdash;  Lotus Tours and Events</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -141,10 +141,9 @@
                 <li class="d-block mb-3">
                   <span class="d-block text-black">Address:</span>
                   <span>
-                    Plot no 63, ground floor <br/>
-Sector 46,
-Gate no 1,<br/>
-Gurgaon 122003
+                    Plot no 63, Ground Floor <br/>
+                    Sector 46, Gate no 1,<br/>
+                    Gurgaon - 122003
                   </span></li>
                 <li class="d-block mb-3"><span class="d-block text-black">Phone:</span><span>+91- 7827374375</span></li>
                 <li class="d-block mb-3"><span class="d-block text-black">Email:</span><span>info@yourdomain.com</span></li>
@@ -162,7 +161,7 @@ Gurgaon 122003
           <div class="col-md-12">
             <div class="border-top">
               <p>
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved Lotus Tour and Events</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  Lotus Tours and Events</a>
             </p>
             </div>
           </div>
