--- a/trips.html
+++ b/trips.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Trips &mdash; Lotus Tour and Events</title>
+    <title>Trips &mdash;  Lotus Tours and Events</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -265,7 +265,7 @@
                   <script>
                     document.write(new Date().getFullYear());
                   </script>
-                  All rights reserved Lotus Tour and Events
+                  All rights reserved  Lotus Tours and Events
                 </p>
               </div>
             </div>
