--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               </div>
               <div class="listing-item-content">
                 <a class="px-3 mb-3 category bg-primary" href="malaysia.html">Price</a>
-                <h2 class="mb-1"><a href="malaysia.html">Malaysia, </a></h2>
+                <h2 class="mb-1"><a href="malaysia.html">Malaysia, MY</a></h2>
               </div>
             </div>
           </div>
@@ -155,7 +155,7 @@
               </div>
               <div class="listing-item-content">
                 <a class="px-3 mb-3 category bg-primary" href="maldives.html">Price</a>
-                <h2 class="mb-1"><a href="maldives.html">Maldives, </a></h2>
+                <h2 class="mb-1"><a href="maldives.html">Maldives, MV</a></h2>
               </div>
             </div>
           </div>
@@ -166,7 +166,7 @@
               </div>
               <div class="listing-item-content">
                 <a class="px-3 mb-3 category bg-primary" href="netherlands.html">Price</a>
-                <h2 class="mb-1"><a href="netherlands.html">Netherlands</a></h2>
+                <h2 class="mb-1"><a href="netherlands.html">Netherlands, NL</a></h2>
               </div>
             </div>
           </div>
@@ -221,7 +221,7 @@
               </div>
               <div class="listing-item-content">
                 <a class="px-3 mb-3 category bg-primary" href="switzerland.html">Price</a>
-                <h2 class="mb-1"><a href="switzerland.html">Switzerland, UAE</a></h2>
+                <h2 class="mb-1"><a href="switzerland.html">Switzerland, CH</a></h2>
               </div>
             </div>
           </div>
