--- a/trips.html
+++ b/trips.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="listing-item-content">
                   <a class="px-3 mb-3 category bg-primary" href="malaysia.html">Price</a>
-                  <h2 class="mb-1"><a href="malaysia.html">Malaysia, </a></h2>
+                  <h2 class="mb-1"><a href="malaysia.html">Malaysia, MY</a></h2>
                 </div>
               </div>
             </div>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="listing-item-content">
                   <a class="px-3 mb-3 category bg-primary" href="maldives.html">Price</a>
-                  <h2 class="mb-1"><a href="maldives.html">Maldives, </a></h2>
+                  <h2 class="mb-1"><a href="maldives.html">Maldives, MV</a></h2>
                 </div>
               </div>
             </div>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="listing-item-content">
                   <a class="px-3 mb-3 category bg-primary" href="netherlands.html">Price</a>
-                  <h2 class="mb-1"><a href="netherlands.html">Netherlands</a></h2>
+                  <h2 class="mb-1"><a href="netherlands.html">Netherlands, NL</a></h2>
                 </div>
               </div>
             </div>
@@ -225,7 +225,7 @@
                 </div>
                 <div class="listing-item-content">
                   <a class="px-3 mb-3 category bg-primary" href="switzerland.html">Price</a>
-                  <h2 class="mb-1"><a href="switzerland.html">Switzerland, UAE</a></h2>
+                  <h2 class="mb-1"><a href="switzerland.html">Switzerland, CH</a></h2>
                 </div>
               </div>
             </div>
