--- a/trips.html
+++ b/trips.html
@@ -114,7 +114,7 @@
                   <img src="images/bangkok/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="bangkok.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="bangkok.html">Explore</a>
                   <h2 class="mb-1"><a href="bangkok.html">Bangkok, TH</a></h2>
                 </div>
               </div>
@@ -125,7 +125,7 @@
                   <img src="images/dubai/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="dubai.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="dubai.html">Explore</a>
                   <h2 class="mb-1"><a href="dubai.html">Dubai, UAE</a></h2>
                 </div>
               </div>
@@ -136,7 +136,7 @@
                   <img src="images/la/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="la.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="la.html">Explore</a>
                   <h2 class="mb-1"><a href="la.html">Los Angeles, USA</a></h2>
                 </div>
               </div>
@@ -147,7 +147,7 @@
                   <img src="images/malaysia/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="malaysia.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="malaysia.html">Explore</a>
                   <h2 class="mb-1"><a href="malaysia.html">Malaysia, MY</a></h2>
                 </div>
               </div>
@@ -158,7 +158,7 @@
                   <img src="images/maldives/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="maldives.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="maldives.html">Explore</a>
                   <h2 class="mb-1"><a href="maldives.html">Maldives, MV</a></h2>
                 </div>
               </div>
@@ -169,7 +169,7 @@
                   <img src="images/neth/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="netherlands.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="netherlands.html">Explore</a>
                   <h2 class="mb-1"><a href="netherlands.html">Netherlands, NL</a></h2>
                 </div>
               </div>
@@ -180,7 +180,7 @@
                   <img src="images/paris/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="paris.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="paris.html">Explore</a>
                   <h2 class="mb-1"><a href="paris.html">Paris, FR</a></h2>
                 </div>
               </div>
@@ -191,7 +191,7 @@
                   <img src="images/pattaya/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="pattaya.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="pattaya.html">Explore</a>
                   <h2 class="mb-1"><a href="pattaya.html">Pattaya, TH</a></h2>
                 </div>
               </div>
@@ -202,7 +202,7 @@
                   <img src="images/sf/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="sf.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="sf.html">Explore</a>
                   <h2 class="mb-1"><a href="sf.html">San Fransisco, USA</a></h2>
                 </div>
               </div>
@@ -213,7 +213,7 @@
                   <img src="images/singapore/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="singapore.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="singapore.html">Explore</a>
                   <h2 class="mb-1"><a href="singapore.html">Singapore, SG</a></h2>
                 </div>
               </div>
@@ -224,7 +224,7 @@
                   <img src="images/swit/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="switzerland.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="switzerland.html">Explore</a>
                   <h2 class="mb-1"><a href="switzerland.html">Switzerland, CH</a></h2>
                 </div>
               </div>
@@ -235,7 +235,7 @@
                   <img src="images/thailand/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="thailand.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="thailand.html">Explore</a>
                   <h2 class="mb-1"><a href="thailand.html">Thailand, TH</a></h2>
                 </div>
               </div>
@@ -246,7 +246,7 @@
                   <img src="images/vietnam/bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="listing-item-content">
-                  <a class="px-3 mb-3 category bg-primary" href="vietnam.html">Price</a>
+                  <a class="px-3 mb-3 category bg-primary" href="vietnam.html">Explore</a>
                   <h2 class="mb-1"><a href="vietnam.html">Vietnam, VN</a></h2>
                 </div>
               </div>
