--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
                     Gurgaon - 122003
                   </span></li>
                 <li class="d-block mb-3"><span class="d-block text-black">Phone:</span><span>+91- 7827374375</span></li>
-                <li class="d-block mb-3"><span class="d-block text-black">Email:</span><span>info@yourdomain.com</span></li>
+                <li class="d-block mb-3"><span class="d-block text-black">Email:</span><span>lotustoursandevents1122@gmail.com</span></li>
               </ul>
             </div>
           </div>
